# misEventos

./: .env.example  .gitignore  README.md  docker-compose.yml  estructura.md  package-lock.json
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_create_events.py  0003_create_sessions.py  0004_create_registrations.py  0005_create_roles_and_rbac_seed.py  0006_rename_super_admin_to_admin.py  0007_create_speakers_and_session_speakers.py  0008_enforce_admin_single_role.py  0009_add_featured_images_to_events.py  0010_create_event_speakers.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  events.py  (+7 more)
backend/app/core/: cache.py  config.py  database.py  security.py
backend/app/models/: event.py  event_speaker.py  registration.py  role.py  session.py  session_speaker.py  speaker.py  user.py  user_role.py
backend/app/repositories/: event_repository.py  event_speaker_repository.py  registration_repository.py  role_repository.py  session_repository.py  session_speaker_repository.py  speaker_repository.py  user_repository.py
backend/app/schemas/: auth.py  event.py  metrics.py  registration.py  session.py  speaker.py  upload.py  user.py
backend/app/services/: auth_service.py  event_service.py  image_service.py  metrics_service.py  registration_service.py  session_service.py  speaker_service.py
backend/app/tests/: conftest.py  test_auth.py  test_events.py  test_registrations.py  test_sessions.py  test_speakers.py  test_users.py
(+66 files in other folders)
